WOB-154 Update styles to avoid jumping project name

--- a/project/application/src/pages/MainPage/style.css
+++ b/project/application/src/pages/MainPage/style.css
@@ -227,7 +227,7 @@ ul {
 }
 
 .project_name {
-    margin-left: 3%;
+    margin-left: 30px;
 }
 
 .time_container_history {
